Allow enforce that users are members of organizations when authenticating
Closes #34275

Signed-off-by: Pedro Igor <pigor.craveiro@gmail.com>